--- a/style.css
+++ b/style.css
@@ -1,31 +1,101 @@
+HTML CSS BabelResult Skip Results Iframe
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  display: grid;
-  /* place-items: center; */
   font-family: 'Poppins';
   background: #2D2E36;
+}
+
+#header-img {
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  
 }
 
 .nav-link {
   color: white;
   text-decoration: none;
-  margin-right: 20px;
+  margin: 10px;
+  cursor: pointer;
 }
 
-#header-img {
-  width: 10%;
-  padding: 10px;
-  border-radius: .2rem;
+.nav-link:hover {
+  color: yellow;
+}
+
+h1 {
+  font-family: 'Bebas Neue';
+  color: white;
+
+}
+
+h4 {
+/*   text-align: center; */
+  color: white;
+  font-family: 'Bebas Neue';
+  font-size: 24px;
+}
+
+header {
+  top: 0;
+  position: fixed;
   display: flex;
+  height: 10px;
+  justify-content: space-between;
+  width: 100%;
+  background-color: black;
+  opacity: 0.7;
+  padding: 25px 0px;
+  align-items: center;
 }
 
-#header {
-    background: #383A45;
-    margin: 1rem;
-    padding: 1rem;
-    border-radius: .4rem;
-    max-width: 100%;
-    height: 20px;
+#home, #services, #gallery, #aftercare, #contact {
+  padding: 4.5rem 2.5rem;
+  border-radius: 5px;
+  width: 1200px;
+  margin: auto;
+  flex-wrap: wrap;
+}
+
+input {
+  width: 100%;
+  background: #EDEDED;
+  border: 1px solid #C7C7C7;
+  font-size: 1rem;
+  padding: .75rem;
+  outline: none;
+  margin-bottom: 2.5rem;
+}
+
+label {
+  display: block;
+  font-size: 1.125 rem;
+  margin-bottom: .77rem;
+  
+}
+
+section {
+  position: relative;
+}
+@media(max-width: 500px) {
+  body {
+    flex-wrap: wrap;
+  }
+}
+@media only screen and (min-width: 770px) {
+  #contact {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 2em;
+  }
+  button {
+    width: auto;
+    padding: 1em 2.5em;
+  }
 }
